# googlemock-example

./: CMakeLists.txt  CMakeSettings.json
tests/: CMakeLists.txt
